--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.10.0",
-    "@kinde-oss/kinde-auth-nextjs": "^2.4.6",
+    "@kinde-oss/kinde-auth-nextjs": "^2.5.0-11",
     "@kinde/management-api-js": "^0.11.0",
     "@neondatabase/serverless": "^0.10.4",
     "@radix-ui/react-accordion": "^1.2.2",
