--- a/package.json
+++ b/package.json
@@ -53,6 +53,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.469.0",
     "next": "15.1.4",
+    "next-safe-action": "^7.10.2",
     "next-themes": "^0.4.4",
     "react": "^19.0.0",
     "react-day-picker": "^8.10.1",
